feat: errorHandler + Auth testing + models
